--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,87 @@
 /** @format */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    line-height: 1.4;
+    font-weight: 300;
+    font-family: "Roboto", sans-serif;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.logo img {
+    width: 150px;
+    height: auto;
+}
+
+.center_nav {
+    display: flex;
+}
+
+.search {
+    display: flex;
+}
+
+.search input {
+    min-width: 600px;
+    padding: 10px 20px;
+    border: 0.5px solid #ccc;
+}
+
+.search button {
+    border: none;
+    padding: 10px 20px;
+}
+
+.mic {
+    padding: 15px;
+    border-radius: 50%;
+    background-color: rgb(212, 212, 212);
+    display: grid;
+    place-items: center;
+    margin-left: 15px;
+}
+
+.mic img {
+    width: 30px;
+}
+
+.side_nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-right: 15px;
+}
+
+/* tags */
+.tags {
+    display: flex;
+    padding: 10px 20px;
+    gap: 15px;
+    border-top: 1px solid #ccc;
+}
+
+.tag {
+    padding: 5px 15px;
+    border-radius: 20px;
+    border: 1px solid rgb(28, 21, 21);
+}
+
+.dark {
+    background: black;
+    color: white;
+}
